--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "browser-sync": "^2.18.11",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "react-collapsible": "^1.4.0",
+    "react-responsive-accordion": "^1.0.0",
     "react-scripts": "1.0.0"
   },
   "scripts": {
